// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it changes state 1`] = `
<div
  className="Greet"
  onClick={[Function]}
>
  I was clicked
</div>
`;

exports[`it matches snapshot 1`] = `
<div
  className="Greet"
  onClick={[Function]}
>
  This is a greet
</div>
`;
